[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["subscriptions"]
subscriptions = ["axum/ws", "juniper_graphql_ws/graphql-ws", "dep:futures"]

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7.4",  features = ["multipart", "http1", "macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.18"
chrono = { version = "0.4.38", features = ["serde"] }
futures = { version = "0.3.22", optional = true }
juniper = { version = "0.16.0", features = ["expose-test-schema"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
juniper_axum = { version = "0.1", features = ["subscriptions"] }
